react-website/src/team.css
.profile_img {
  /* object-fit: contain; */
  max-width: 360px;
  height: auto;
  overflow: hidden;
  margin-bottom: 10px;
}

.title_area {
  margin-top: 50px;
  margin-bottom: 50px;
}

.section {
  display: flex;
  flex-wrap: wrap;
  margin-left: 100px;
  margin-right: 100px;
  margin-bottom: 20px;
  padding: 10px;
}

.section_subcommittee {
    display: flex;
    margin-left: 190px;
    margin-right: 100px;
    margin-bottom: 20px;
    padding: 10px;
  }

.profile {
  /* totally didn't hard code this part in :D  */
  flex: 30%;
  /* hardcorded padding - may have issues if image size changes */
  padding-left: 90px;
  padding-right: 90px;
  display: inline-block;
  vertical-align: middle;
  float: none;
}

.profile_details {
  text-align: left;
}

.profile_details_subcommittee {
    margin-left: 40px;
    text-align: left;
  }

.icon_bar {
  width: 90px;
}

.icon_bar a {
  float: left;
  width: 20%;
  padding: 12px 0;
}

.icon {
  width: 15px;
  height: 15px;
  border: 0;
  margin-right: 10px;
}

/* To do: css for the different word styles in the profile description */

.subheader {
  font-family: Arial;
  font-size: 13pt;
  color: grey;
  font-weight: bold;
}

.profile_text_name {
  font-family: Arial;
  font-size: 9pt;
  font-weight: bold;
  color: orange;
}

.profile_text_position {
  font-family: Arial;
  font-size: 5pt;
  color: orange;
  font-weight: bold;
}

p {
  font-family: Arial;
  font-size: 7pt;
  margin-top: 0;
  color: orange;
}

